// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkChip dark mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -11249568,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(1, 9, 19)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip dark mode should render correctly with "disabled" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -11249568,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(1, 9, 19)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(1, 9, 19)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(68, 80, 95)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip dark mode should render correctly with "selected" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -11249568,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(1, 9, 19)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(0, 98, 227)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip dark mode should render outline correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [
        Object {
          "elevation": 0,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -11249568,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(1, 9, 19)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "transparent",
          "borderColor": "rgb(68, 80, 95)",
          "borderWidth": 1,
          "paddingVertical": 7,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip light mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip light mode should render correctly with "disabled" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(194, 201, 205)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip light mode should render correctly with "selected" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(0, 98, 227)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip light mode should render outline correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [
        Object {
          "elevation": 0,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "transparent",
          "borderColor": "rgb(68, 80, 95)",
          "borderWidth": 1,
          "paddingVertical": 7,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
    testID="123"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [
        Object {
          "flex": 1,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with leadingAccessoryView 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
            Object {
              "marginStart": 4,
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should render correctly with trailingAccessoryView 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
            Object {
              "marginEnd": 4,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkChip should support theming when selected 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Accessibility label"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "rippleRadius": undefined,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(0, 98, 227)",
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "textAlign": "left",
          },
          Object {},
          Object {
            "fontFamily": "relative",
          },
          Array [
            Object {
              "color": "rgb(22, 22, 22)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "yellow",
            },
          ],
        ]
      }
    >
      Label
    </Text>
  </View>
</View>
`;
